--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@
     </header>
     
     <section>
-        <div class="background-img">
+    <div class="background-container">
+    <div class="background-img"></div>
+    <div class="text-overlay">
+        <h1 class="text-34"><span>TBC x USAID</span> <br>
+        ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</h1>
+    </div>
+    </div>
+        <!-- <div class="background-img">
             <div>
                 <h1>TBC x USAID</h1>
                 <p class="text-34">ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</p>
             </div>
-        </div>
+        </div> -->
         <div class="tbc-info">
             <div>
             <p class="text-32 line-height">„ TBC x USAID - ტექნოლოგიური განათლებისთვის “ პროგრამა<br>
@@ -43,10 +50,9 @@
                 პრაქტიკულ კურსებს  სხვადასხვა ICT მიმართულებით.<br>
                 წარმატებულ კურსდამთავრებულებს ეძლევათ შესაძლებლობა<br>
                 დასაქმდნენ თიბისისა და მის პარტნიორ კომპანიებში.</p>
-            <a>გაიგე მეტი</a>
+            <a class="primary-color">გაიგე მეტი</a>
             </div>
         </div>
     </section>
-
 </body>
 </html>
