--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TBC x USAID</title>
     <link href="/src/styles/styles.css" rel="stylesheet" />
+    <script src="/src/script.js" defer></script>
 </head>
 <body>
     <header>
         <nav class="navbar">
             <img src="/src/icons/logo.svg" />
 
-            <ul>
+            <ul class="mobile-nav">
+                <img class="close-menu-icon" src="/src/icons/icon-close.svg" />
                 <li>
                     <a>მთავარი</a>
                 </li>
@@ -24,7 +26,11 @@
                 <li>
                     <a>რისკები</a>
                 </li>
+                
             </ul>
+            <button class="btn-mobile-nav">
+                <img class="menu-icon" src="/src/icons/menu.svg" />
+            </button>
         </nav>
     </header>
     
@@ -36,12 +42,7 @@
         ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</h1>
     </div>
     </div>
-        <!-- <div class="background-img">
-            <div>
-                <h1>TBC x USAID</h1>
-                <p class="text-34">ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</p>
-            </div>
-        </div> -->
+
         <div class="tbc-info">
             <div>
             <p class="text-32 line-height">„ TBC x USAID - ტექნოლოგიური განათლებისთვის “ პროგრამა<br>
