--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <img src="/src/icons/logo.svg" />
 
-            <ul class="mobile-nav">
+            <ul class="nav-list">
                 <img class="close-menu-icon" src="/src/icons/icon-close.svg" />
                 <li>
                     <a>მთავარი</a>
@@ -25,8 +25,7 @@
                 </li>
                 <li>
                     <a>რისკები</a>
-                </li>
-                
+                </li>  
             </ul>
             <button class="btn-mobile-nav">
                 <img class="menu-icon" src="/src/icons/menu.svg" />
@@ -42,7 +41,6 @@
         ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</h1>
     </div>
     </div>
-
         <div class="tbc-info">
             <div>
             <p class="text-32 line-height">„ TBC x USAID - ტექნოლოგიური განათლებისთვის “ პროგრამა<br>
