added responsive design

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <script src="/src/script.js" defer></script>
 </head>
 <body>
-    <header>
+    <header class="nav-container">
         <nav class="navbar">
             <img src="/src/icons/logo.svg" />
 
             <ul class="nav-list">
-                <img class="close-menu-icon" src="/src/icons/icon-close.svg" />
+                <button class="btn-close-nav">
+                    <img class="close-menu-icon" src="/src/icons/icon-close.svg" />
+                </button>
                 <li>
                     <a>მთავარი</a>
                 </li>
