added partners section

--- a/index.html
+++ b/index.html
@@ -187,5 +187,22 @@
         </div>
 
     </section>
+
+    <section class="project-partners">
+        <div class="partner-box">
+            <h2>პროექტის პარტნიორები</h2>
+
+            <div class="partners-box">
+                <svg class='arrow'  height="40px"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
+            <div class="partners-wrapper">
+                <img src="/src/images/usaid.webp" />
+                <img src="/src/images/space.webp" />
+                <img src="/src/images/tnet.webp" />
+            </div>
+                <svg class='right-arrow' height="40px" fill="rgb(226,224,224)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
