--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <div class="box-wrapper">
                 <div class="box-img">
-                    <img src="/src/images/ios.webp" />
+                    <img src="/src/images/ios.webp" width="100%" />
                     <div>
                         <p class="text-18">iOS Development</p>
                         <p class="text-14">რეგისტრაცია დასრულებულია</p>
