addes some styles

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <h2>სასწავლო კურსები</h2>
             </div>
 
-            <div class="box-wrapper">
-                <div class="box-img">
+            <div class="box-wrapper grid-container">
+                <div class="box-img grid-item">
                     <img src="/src/images/ios.webp" width="100%" />
                     <div>
                         <p class="text-18">iOS Development</p>
@@ -76,7 +76,7 @@
                     </div>
 
                 </div>
-                <div class="box-img">
+                <div class="box-img grid-item">
                     <img src="/src/images/react.webp" />
                     <div>
                         <p class="text-18">React</p>
@@ -89,7 +89,7 @@
                     </div>
 
                 </div>
-                <div class="box-img">
+                <div class="box-img grid-item">
                     <img src="/src/images/python.webp" />
                     <div>
                         <p class="text-18">Intro to Python</p>
@@ -102,7 +102,7 @@
                     </div>
 
                 </div>
-                <div class="box-img">
+                <div class="box-img grid-item">
                     <img src="/src/images/adv-python.webp" />
                     <div>
                         <p class="text-18">Advanced Python</p>
@@ -115,7 +115,7 @@
                     </div>
 
                 </div>
-                <div class="box-img">
+                <div class="box-img grid-item">
                     <img src="/src/images/cyber.webp" />
                     <div>
                         <p class="text-18">Advanced Cybersecurity Course</p>
@@ -128,7 +128,7 @@
                     </div>
 
                 </div>
-                <div class="box-img">
+                <div class="box-img grid-item">
                     <img src="/src/images/tot.webp" />
                     <div>
                         <p class="text-18">ToT - Training of Trainers</p>
@@ -141,7 +141,7 @@
                     </div>
 
                 </div>
-                <div class="box-img">
+                <div class="box-img grid-item">
                     <img src="/src/images/blockchain.webp" />
                     <div>
                         <p class="text-18">Blockchain</p>
@@ -154,7 +154,7 @@
                     </div>
 
                 </div>
-                <div class="box-img">
+                <div class="box-img grid-item">
                     <img src="/src/images/devops.webp" />
                     <div>
                         <p class="text-18">DevOps</p>
@@ -167,7 +167,7 @@
                     </div>
 
                 </div>
-                <div class="box-img">
+                <div class="box-img grid-item">
                     <img src="/src/images/security.webp" />
                     <div>
 
@@ -204,5 +204,6 @@
         </div>
 
     </section>
+    
 </body>
 </html>
