made some changes in css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
             <img src="/src/icons/logo.svg" />
 
             <ul class="nav-list">
+                <li>
+                    <a>მთავარი</a>
+                </li>
+                <li>
+                    <a>TBC IT</a>
+                </li>
+                <li>
+                    <a>TBC x USAID</a>
+                </li>
+                <li>
+                    <a>რისკები</a>
+                </li>  
+            </ul>
+            <ul class="navbar-open">
                 <button class="btn-close-nav">
                     <img class="close-menu-icon" src="/src/icons/icon-close.svg" />
                 </button>
@@ -195,13 +209,27 @@
             <div class="partners-box">
                 <svg class='arrow'  height="40px"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
             <div class="partners-wrapper">
-                <img src="/src/images/usaid.webp" />
-                <img src="/src/images/space.webp" />
-                <img src="/src/images/tnet.webp" />
+                <div >
+                    <img src="/src/images/usaid.webp" />
+                    <img src="/src/images/space.webp" />
+                    <img src="/src/images/tnet.webp" />
+                </div>
+                <!-- <div >
+                    <img src="/src/images/tegeta.webp" />
+                    <img src="/src/images/spectre.webp" />
+                    <img src="/src/images/tbc-lizing.webp" />
+                </div>
+                <div >
+                    <img src="/src/images/ufc.webp" />
+                </div> -->
             </div>
-                <svg class='right-arrow' height="40px" fill="rgb(226,224,224)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
+            <svg class='right-arrow' height="40px" fill="rgb(226,224,224)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
             </div>
         </div>
+
+    </section>
+
+    <section class="faq-section">
 
     </section>
     
