added faq section

--- a/index.html
+++ b/index.html
@@ -230,7 +230,27 @@
     </section>
 
     <section class="faq-section">
+    <div class="faq-box"> 
+     <div class="faq-link">
+       <h2 class="text-24">ხშირად დასმული კითხვები</h2>
+       <a class="text-20">ყველა კითხვა</a>
+     </div>
+     <div class="questions">
+        <p>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</p>
+        <img src="/src/icons/arrow-up.svg" />
+     </div>
+     <div class="questions">
+        <p>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</p>
+        <img src="/src/icons/arrow-up.svg" />
+     </div>
+     <div class="questions">
+        <p>რა ღირს სწავლა პროგრამის ფარგლებში?</p>
+        <img src="/src/icons/arrow-up.svg" />
+     </div>
+     
 
+
+    </div>
     </section>
     
 </body>
