added accordion functionality

--- a/index.html
+++ b/index.html
@@ -235,9 +235,47 @@
        <h2 class="text-24">ხშირად დასმული კითხვები</h2>
        <a class="text-20">ყველა კითხვა</a>
      </div>
-     <div class="questions">
-        <p>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</p>
-        <img src="/src/icons/arrow-up.svg" />
+     <div class="questions-wrapper">
+        <div class="questions" id="accordion-trigger">
+            <p class="text-20">როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</p>
+            <img src="/src/icons/arrow-up.svg" />
+        </div>
+
+        <div class="hidden-box" id="accordion-content">
+            <p class="text-14">კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:</p>
+
+            <ul>
+                <li>
+                    <p class="text-14">
+                        I ეტაპი - პირველ ეტაპზე საჭიროა, შეავსო სასურველი კურსისთვის განკუთვნილი სარეგისტრაციო ფორმა, რომელიც<br>
+                         განთავსებულია კურსის შიდა გვერდზე. კურსზე რეგისტრაციის დასრულების შემდეგ დაიწყება შემოსული<br> განცხადებების გადარჩევა. 
+                    </p>
+                </li>
+                <li>
+                    <p class="text-14">
+                        II ეტაპი - შერჩევის მეორე ეტაპი კურსების მიხედვით განსხვავებულია, ზოგიერთი კურსისთვის მოიცავს პრე-ტესტს,<br>
+                         ზოგიერთ კურსზე კი უნარების ტესტს, სადაც მინიმალური ზღვარის გადალახვის შემთხვევაში გადახვალ შერჩევის<br>
+                          შემდეგ ეტაპზე.
+                    </p>
+                </li>
+                <li>
+                    <p class="text-14">
+                      III ეტაპი - მესამე ეტაპი კურსების მიხედვით განსხვავდება: Advance კურსებზე, სადაც მოითხოვება გარკვეული<br>
+                       ტექნიკური ცოდნა, მონაწილეებმა უნდა დაწერონ ტექნიკური ტესტი ცოდნის დონის შესამოწმებლად, ხოლო კურსებზე,<br>
+                        სადაც რაიმე ტიპის წინასწარი ცოდნა მოთხოვნილი არ არის უნდა შეასრულოთ ტექნიკური დავალება, რაც თქვენი<br>
+                         კვლევისა და თვითსწავლის უნარს ამოწმებს.
+                         </p>
+                </li>
+                <li>
+                    <p class="text-14">
+                     IV ეტაპი - შერჩევის ბოლო მეოთხე ეტაპი მოიცავს გასაუბრებას შესარჩევ კომისიასთან. გასაუბრების წარმატებით<br>
+                      გავლის შემთხვევაში ჩაირიცხებით კურსზე და გაფორმდება შესაბამისი ხელშეკრულება.                </li>
+            </ul>
+          <p class="text-14">
+             * სანამ კურსზე დარეგისტრირდები მნიშვნელოვანია, ყურადღებით წაიკითხო კურსისაღწერა, ნახო რას ისწავლი კურსის<br>
+             განმავლობაში და გაიგო გააჩნია თუ არა კურსს დასწრების წინაპირობა. 
+            </p>
+        </div>
      </div>
      <div class="questions">
         <p>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</p>
