added accordions arrow trotation

--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
      <div class="questions-wrapper">
         <div class="questions" id="accordion-trigger">
             <p class="text-20">როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</p>
-            <img src="/src/icons/arrow-up.svg" />
+            <img id="rotate" src="/src/icons/arrow-up.svg" />
         </div>
 
         <div class="hidden-box" id="accordion-content">
-            <p class="text-14">კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:</p>
-
+            
+            <p class="text-14 hiding-p">კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:</p>
             <ul>
                 <li>
                     <p class="text-14">
@@ -277,15 +277,27 @@
             </p>
         </div>
      </div>
-     <div class="questions">
-        <p>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</p>
-        <img src="/src/icons/arrow-up.svg" />
-     </div>
-     <div class="questions">
+     <div class="questions" id="accordion-trigger-2">
+        <p class="text-20">შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</p>
+        <img id="rotate-2" src="/src/icons/arrow-up.svg" />
+    </div>
+    <div class="hidden-box-2" id="accordion-content-2">
+      <p class="text-14 hiding-p">
+        TBC X USAID ტექნოლოგიური განათლებისთვის პროგრამაში თითოეულ კანდიდატს აქვს მხოლოდ ერთი კურსის გავლის<br>
+        შესაძლებლობა. გარდა Information Security და Python კურსებისა, სადაც Basic დონის გავლის შემდეგ შესაძლებელია<br>
+        სწავლის გაგრძელება Advance დონეზე.
+       </p>
+    </div>
+
+     <div class="questions" id="accordion-trigger-3">
         <p>რა ღირს სწავლა პროგრამის ფარგლებში?</p>
-        <img src="/src/icons/arrow-up.svg" />
+        <img id="rotate-3" src="/src/icons/arrow-up.svg" />
      </div>
-     
+     <div class="hidden-box-3" id="accordion-content-3">
+      <p class="text-14 hiding-p">
+        პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია თიბისი ბანკისა და USAID-ის მიერ.
+       </p>
+    </div>
 
 
     </div>
