added some css to text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 პრაქტიკულ კურსებს  სხვადასხვა ICT მიმართულებით.<br>
                 წარმატებულ კურსდამთავრებულებს ეძლევათ შესაძლებლობა<br>
                 დასაქმდნენ თიბისისა და მის პარტნიორ კომპანიებში.</p>
-            <a class="primary-color">გაიგე მეტი</a>
+                <a class="primary-color">გაიგე მეტი</a> 
             </div>
         </div>
     </section>
@@ -233,7 +233,7 @@
     <div class="faq-box"> 
      <div class="faq-link">
        <h2 class="text-24">ხშირად დასმული კითხვები</h2>
-       <a class="text-20">ყველა კითხვა</a>
+       <a class="text-20 primary-color">ყველა კითხვა</a>
      </div>
      <div class="questions-wrapper">
         <div class="questions" id="accordion-trigger">
@@ -290,7 +290,7 @@
     </div>
 
      <div class="questions" id="accordion-trigger-3">
-        <p>რა ღირს სწავლა პროგრამის ფარგლებში?</p>
+        <p class="text-20">რა ღირს სწავლა პროგრამის ფარგლებში?</p>
         <img id="rotate-3" src="/src/icons/arrow-up.svg" />
      </div>
      <div class="hidden-box-3" id="accordion-content-3">
