addes sliders functionality

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a>TBC x USAID</a>
                 </li>
                 <li>
-                    <a>რისკები</a>
+                    <a >რისკები</a>
                 </li>  
             </ul>
             <ul class="navbar-open">
@@ -209,19 +209,21 @@
             <div class="partners-box">
                 <svg class='arrow'  height="40px"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
             <div class="partners-wrapper">
-                <div >
-                    <img src="/src/images/usaid.webp" />
-                    <img src="/src/images/space.webp" />
-                    <img src="/src/images/tnet.webp" />
-                </div>
-                <!-- <div >
-                    <img src="/src/images/tegeta.webp" />
-                    <img src="/src/images/spectre.webp" />
-                    <img src="/src/images/tbc-lizing.webp" />
-                </div>
-                <div >
-                    <img src="/src/images/ufc.webp" />
-                </div> -->
+                <div class="custom-partners-wrapper">
+    <div class="custom-group">
+        <img src="/src/images/usaid.webp" />
+        <img src="/src/images/space.webp" />
+        <img src="/src/images/tnet.webp" />
+    </div>
+    <div class="custom-group">
+        <img src="/src/images/tegeta.webp" />
+        <img src="/src/images/spectre.webp" />
+        <img src="/src/images/tbc-lizing.webp" />
+    </div>
+    <div class="custom-group">
+        <img src="/src/images/ufc.webp" />
+    </div>
+</div>
             </div>
             <svg class='right-arrow' height="40px" fill="rgb(226,224,224)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
             </div>
@@ -303,5 +305,20 @@
     </div>
     </section>
     
+    <!-- <div class="custom-partners-wrapper">
+    <div class="custom-group">
+        <img src="/src/images/usaid.webp" />
+        <img src="/src/images/space.webp" />
+        <img src="/src/images/tnet.webp" />
+    </div>
+    <div class="custom-group">
+        <img src="/src/images/tegeta.webp" />
+        <img src="/src/images/spectre.webp" />
+        <img src="/src/images/tbc-lizing.webp" />
+    </div>
+    <div class="custom-group">
+        <img src="/src/images/ufc.webp" />
+    </div>
+</div> -->
 </body>
 </html>
