added more slider functionality

--- a/index.html
+++ b/index.html
@@ -207,26 +207,27 @@
             <h2>პროექტის პარტნიორები</h2>
 
             <div class="partners-box">
-                <svg class='arrow'  height="40px"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
-            <div class="partners-wrapper">
-                <div class="custom-partners-wrapper">
-    <div class="custom-group">
-        <img src="/src/images/usaid.webp" />
-        <img src="/src/images/space.webp" />
-        <img src="/src/images/tnet.webp" />
+    <svg class='arrow left-arrow' height="40px" fill="rgb(226,224,224)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
+    <div class="partners-wrapper">
+        <div class="custom-partners-wrapper">
+            <div class="custom-group">
+                <img src="/src/images/usaid.webp" />
+                <img src="/src/images/space.webp" />
+                <img src="/src/images/tnet.webp" />
+            </div>
+            <div class="custom-group">
+                <img src="/src/images/tegeta.webp" />
+                <img src="/src/images/spectre.webp" />
+                <img src="/src/images/tbc-lizing.webp" />
+            </div>
+            <div class="custom-group">
+                <img src="/src/images/ufc.webp" />
+            </div>
+        </div>
     </div>
-    <div class="custom-group">
-        <img src="/src/images/tegeta.webp" />
-        <img src="/src/images/spectre.webp" />
-        <img src="/src/images/tbc-lizing.webp" />
-    </div>
-    <div class="custom-group">
-        <img src="/src/images/ufc.webp" />
-    </div>
+    <svg class='arrow right-arrow' height="40px" fill="rgb(226,224,224)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
 </div>
-            </div>
-            <svg class='right-arrow' height="40px" fill="rgb(226,224,224)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
-            </div>
+
         </div>
 
     </section>
@@ -304,21 +305,5 @@
 
     </div>
     </section>
-    
-    <!-- <div class="custom-partners-wrapper">
-    <div class="custom-group">
-        <img src="/src/images/usaid.webp" />
-        <img src="/src/images/space.webp" />
-        <img src="/src/images/tnet.webp" />
-    </div>
-    <div class="custom-group">
-        <img src="/src/images/tegeta.webp" />
-        <img src="/src/images/spectre.webp" />
-        <img src="/src/images/tbc-lizing.webp" />
-    </div>
-    <div class="custom-group">
-        <img src="/src/images/ufc.webp" />
-    </div>
-</div> -->
 </body>
 </html>
