added page icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TBC x USAID</title>
     <link href="/src/styles/styles.css" rel="stylesheet" />
+    <link rel="icon" href="/src/icons/page-icon.png" type="image/x-icon">
     <script src="/src/script.js" defer></script>
 </head>
 <body>
