added more slider funtionality

--- a/index.html
+++ b/index.html
@@ -221,23 +221,29 @@
                 <img src="/src/images/spectre.webp" />
                 <img src="/src/images/tbc-lizing.webp" />
             </div>
-            <div class="custom-group">
+            <div class="custom-group group-3">
                 <img src="/src/images/ufc.webp" />
             </div>
         </div>
+        
     </div>
     <svg class='arrow right-arrow' height="40px" fill="rgb(226,224,224)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
 </div>
+ <div class="dot-container">
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+  </div>
 
         </div>
 
     </section>
 
-    <section class="faq-section">
+ <section class="faq-section">
     <div class="faq-box"> 
      <div class="faq-link">
        <h2 class="text-24">ხშირად დასმული კითხვები</h2>
-       <a class="text-20 primary-color">ყველა კითხვა</a>
+       <a class="text-20 primary-color hidden-question">ყველა კითხვა</a>
      </div>
      <div class="questions-wrapper">
         <div class="questions" id="accordion-trigger">
@@ -302,9 +308,8 @@
         პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია თიბისი ბანკისა და USAID-ის მიერ.
        </p>
     </div>
-
-
+        <a class="text-20 primary-color hidden-question-2">ყველა კითხვა</a>
     </div>
-    </section>
+ </section>
 </body>
 </html>
