--- a/index.html
+++ b/index.html
@@ -228,15 +228,13 @@
         
     </div>
     <svg class='arrow right-arrow' height="40px" fill="rgb(226,224,224)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 41"><path d="M20.3 40.8 0 20.5 20.3.2l.7.7L1.3 20.5 21 40.1z"></path></svg>
-</div>
- <div class="dot-container">
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
   </div>
-
-        </div>
-
+   <div class="dot-container">
+     <div class="dot"></div>
+     <div class="dot"></div>
+     <div class="dot"></div>
+  </div>
+    </div>
     </section>
 
  <section class="faq-section">
@@ -311,5 +309,27 @@
         <a class="text-20 primary-color hidden-question-2">ყველა კითხვა</a>
     </div>
  </section>
+
+ <footer>
+  
+        <div class="footer-wrapper">
+            <img style="align-self: flex-start;" src="/src/images/tbc-footer.webp" />
+            <p class="text-18">© 2023 ყველა უფლება დაცულია</p>
+            <a class="text-18">წესები და პირობები</a>
+        </div>
+
+        <div class="footer-box">
+            <div>
+                <a href="https://www.facebook.com/" target="_blank">
+                   <img src="/src/images/fb.webp" />
+                </a>
+                <a href="https://www.youtube.com/" target="_blank">
+                    <img src="/src/images/youtube.webp" />
+                </a>
+            </div>
+            <a href="https://mail.google.com/" target="_blank" class="footer-link">მოგვწერეთ</a>
+        </div>
+   
+ </footer>
 </body>
 </html>
