added footers styles

--- a/index.html
+++ b/index.html
@@ -310,15 +310,30 @@
     </div>
  </section>
 
- <footer>
+ <footer class="footer">
   
         <div class="footer-wrapper">
             <img style="align-self: flex-start;" src="/src/images/tbc-footer.webp" />
-            <p class="text-18">© 2023 ყველა უფლება დაცულია</p>
-            <a class="text-18">წესები და პირობები</a>
+
+<div class="display-none">
+    <a href="https://mail.google.com/" target="_blank" class="footer-link">მოგვწერეთ</a>
+            <div>
+                <a href="https://www.facebook.com/" target="_blank">
+                   <img src="/src/images/fb.webp" />
+                </a>
+                <a href="https://www.youtube.com/" target="_blank">
+                    <img src="/src/images/youtube.webp" />
+                </a>
+            </div>
+        </div>
+<div class="rights">
+
+    <p class="text-18">© 2023 ყველა უფლება დაცულია</p>
+    <a class="text-18">წესები და პირობები</a>
+</div>
         </div>
 
-        <div class="footer-box">
+        <div class="footer-box hidden-div">
             <div>
                 <a href="https://www.facebook.com/" target="_blank">
                    <img src="/src/images/fb.webp" />
