modified css styles

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
             <ul class="nav-list">
                 <li>
-                    <a>მთავარი</a>
+                    <a href="https://www.tbcacademy.ge/" target="_blank">მთავარი</a>
                 </li>
                 <li>
-                    <a>TBC IT</a>
+                    <a href="https://www.tbcacademy.ge/it-academy" target="_blank">TBC IT</a>
                 </li>
                 <li>
-                    <a>TBC x USAID</a>
+                    <a class="link-active" style="color: rgb(5,146,199);">TBC x USAID</a>
                 </li>
                 <li>
-                    <a >რისკები</a>
+                    <a href="https://www.tbcacademy.ge/risks-academy" target="_blank">რისკები</a>
                 </li>  
             </ul>
             <ul class="navbar-open">
