modified html and js file

--- a/index.html
+++ b/index.html
@@ -318,6 +318,6 @@
             <a href="https://mail.google.com/" target="_blank" class="footer-link">მოგვწერეთ</a>
         </div>
  </footer>
- <script src="/src/script.js" defer></script>
+ <script src="/src/js/script.js" defer></script>
 </body>
 </html>
